1.7.0g (Bootstrap) ++ responsive gutters (spacing between columns in container) was set in search form ++ responsive column widths were set for search form ++ responsive padding was adjusted for the first row of Simbad-ID results container ++ fix: responsive padding was set for the second row  of Simbad-ID results container

--- a/astrosearcher/src/main/resources/static/css/main.css
+++ b/astrosearcher/src/main/resources/static/css/main.css
@@ -7,7 +7,7 @@ html {
 
 body {
     height: 100%;
-    font-size: 1.2rem;
+    font-size: 1.15rem;
     background: inherit;
 }
 
@@ -52,6 +52,14 @@ header {
 
 .mt-7 {
     margin-top: 7.5rem !important;
+}
+
+.mw-90 {
+    max-width: 90%;
+}
+
+.w-min-75 {
+    min-width: 75%;
 }
 
 /*******************
